Geek_Practice/LinkedList/compiling_error.txt
/Users/chiranjeev/Documents/C_and_Cpp/Geek_Practice/LinkedList/FindMidData.cpp:33:12: warning: missing terminating '"' character [-Winvalid-pp-token]
    printf("%d
           ^
/Users/chiranjeev/Documents/C_and_Cpp/Geek_Practice/LinkedList/FindMidData.cpp:33:12: error: expected expression
/Users/chiranjeev/Documents/C_and_Cpp/Geek_Practice/LinkedList/FindMidData.cpp:34:1: warning: missing terminating '"' character [-Winvalid-pp-token]
", getMiddle(head));
^
/Users/chiranjeev/Documents/C_and_Cpp/Geek_Practice/LinkedList/FindMidData.cpp:39:27: error: function definition is not allowed here
int getMiddle(Node *head) {
                          ^
/Users/chiranjeev/Documents/C_and_Cpp/Geek_Practice/LinkedList/FindMidData.cpp:50:2: error: expected '}'
}
 ^
/Users/chiranjeev/Documents/C_and_Cpp/Geek_Practice/LinkedList/FindMidData.cpp:23:12: note: to match this '{'
int main() {
           ^
2 warnings and 3 errors generated.
